changed file extensions to be case-sensitive

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
           <p class="lead">21 years old. From Pace, Florida. 4th year Computer Engineering and Mathematics Double Major at the Univeristy of Florida. Research assistant in the Biology and Mathematics Departments. Robotics team member in the Machine Intelligence Lab. Vice President of UF's Association of Computer Engineers. Former Baseball Operations intern for the New York Mets.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="headshot.jpg">
+          <img class="featurette-image img-responsive center-block" src="headshot.JPG">
         </div>
       </div>
 
