cleaned everything up

--- a/about.html
+++ b/about.html
@@ -78,10 +78,10 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Goals.</h2>
-          <p class="lead">Earn a PhD in Computer Engineering, specializing in Robotics. Publish my biomath research paper. Travel the world. Enjoy what I do.</p>
+          <p class="lead">Publish my biomath research paper. Earn a PhD in Computer Engineering, specializing in Robotics. Retire early to surf the world and make nature documentaries with my friends.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="beach.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
