--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="cover-container">
 
           <div class="inner cover">
-            <h1 class="cover-heading">Howdy, I'm Brandon Peterson...</h1>
+            <h1 class="cover-heading">Sup? I'm Brandon Peterson...</h1>
             <p class="lead">...but you can call me Peach.</p>
           </div>
 
