--- a/about.html
+++ b/about.html
@@ -33,12 +33,13 @@
 
   <body>
 
-    <!-- NAVBAR
-    ================================================== -->
+    <!-- Navbar -->
     <nav class="nav nav-tabs navbar-fixed-top nav-justified">
         <li role="presentation" class="active"><a href="index.html">Home</a></li>
         <li role="presentation"><a href="about.html">About</a></li>
-        <li role="presentation"><a href="connect.html">Connect</a></li>
+        <!-- Add Connect tab if time permits
+          <li role="presentation"><a href="connect.html">Connect</a></li>
+        -->
     </nav>
 
     <!-- Marketing messaging and featurettes
@@ -47,8 +48,9 @@
 
     <div class="container marketing">
 
-      <!-- START THE FEATURETTES -->
-
+      <!-- Start featurettes -->
+      
+      <!-- First featurette-->
       <hr class="featurette-divider">
 
       <div class="row featurette">
@@ -61,6 +63,7 @@
         </div>
       </div>
 
+      <!-- Second featurette-->
       <hr class="featurette-divider">
 
       <div class="row featurette">
@@ -73,6 +76,7 @@
         </div>
       </div>
 
+      <!-- Third featurette-->
       <hr class="featurette-divider">
 
       <div class="row featurette">
@@ -87,10 +91,10 @@
 
       <hr class="featurette-divider">
 
-      <!-- /END THE FEATURETTES -->
+      <!-- End featurettes -->
 
 
-      <!-- FOOTER -->
+      <!-- Footer -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
