--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 
         <div class="cover-container">
 
+          <!-- Cover Page Title-->
           <div class="inner cover">
             <h1 class="cover-heading">Sup? I'm Brandon Peterson...</h1>
             <p class="lead">...but you can call me Peach.</p>
           </div>
-
+          <!-- Footer -->
           <div class="mastfoot">
             <div class="inner">
               <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
@@ -55,7 +56,7 @@
       </div>
 
     </div>
-
+    <!-- Navbar -->
     <nav class="nav nav-tabs navbar-fixed-top nav-justified">
         <li role="presentation" class="active"><a href="index.html">Home</a></li>
         <li role="presentation"><a href="about.html">About</a></li>
