commented everything I understood

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     <nav class="nav nav-tabs navbar-fixed-top nav-justified">
         <li role="presentation" class="active"><a href="index.html">Home</a></li>
         <li role="presentation"><a href="about.html">About</a></li>
-        <li role="presentation"><a href="connect.html">Connect</a></li>
+        <!-- Add Connect tab if time permits
+          <li role="presentation"><a href="connect.html">Connect</a></li>
+        -->
     </nav>
 
     <!-- Latest compiled and minified JavaScript -->
